{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 9,
  "lineage": "d71de2c1-859e-5832-00a6-c9a33fec3296",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "datavpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050301329:vpc/vpc-01fb7b7e6dfa92c9b",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02768fcbaa34f4ef3",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-05e58f3d653718b52",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01fb7b7e6dfa92c9b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cfcd49f4e067ae22",
            "owner_id": "975050301329",
            "tags": {
              "Name": "datavpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050301329:internet-gateway/igw-047ca25bb4f58054e",
            "id": "igw-047ca25bb4f58054e",
            "owner_id": "975050301329",
            "tags": {
              "Name": "IGW-terraform"
            },
            "tags_all": {
              "Name": "IGW-terraform"
            },
            "vpc_id": "vpc-0e05cf7b6af0de37f"
          },
          "dependencies": [
            "aws_vpc.amit-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "datasource-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050301329:internet-gateway/igw-0f8692180579420a8",
            "id": "igw-0f8692180579420a8",
            "owner_id": "975050301329",
            "tags": {
              "Name": "datasource-IGW"
            },
            "tags_all": {
              "Name": "datasource-IGW"
            },
            "vpc_id": "vpc-01fb7b7e6dfa92c9b"
          },
          "dependencies": [
            "data.aws_vpc.datavpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050301329:route-table/rtb-0fbebd93200a6e59a",
            "id": "rtb-0fbebd93200a6e59a",
            "owner_id": "975050301329",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047ca25bb4f58054e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RouteTable",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "Public-RouteTable",
              "Service": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e05cf7b6af0de37f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW-terraform",
            "aws_vpc.amit-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-routetable-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e16e06a0c334e51",
            "route_table_id": "rtb-0fbebd93200a6e59a",
            "subnet_id": "subnet-0b3dccf0f7c429797"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-terraform",
            "aws_route_table.Public-RouteTable",
            "aws_subnet.Public-subnet",
            "aws_vpc.amit-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050301329:security-group/sg-01b01c4356f84afd6",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b01c4356f84afd6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "975050301329",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e05cf7b6af0de37f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.amit-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050301329:subnet/subnet-0b3dccf0f7c429797",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3dccf0f7c429797",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050301329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet"
            },
            "tags_all": {
              "Name": "Public-Subnet"
            },
            "vpc_id": "vpc-0e05cf7b6af0de37f"
          },
          "dependencies": [
            "aws_vpc.amit-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "amit-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050301329:vpc/vpc-0e05cf7b6af0de37f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-054ccc9f798be30c6",
            "default_route_table_id": "rtb-093b7d38028a62105",
            "default_security_group_id": "sg-062a6d26c95590323",
            "dhcp_options_id": "dopt-05e58f3d653718b52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e05cf7b6af0de37f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-093b7d38028a62105",
            "owner_id": "975050301329",
            "tags": {
              "Name": "amit-terraform"
            },
            "tags_all": {
              "Name": "amit-terraform"
            }
          }
        }
      ]
    }
  ]
}